--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark">
+<footer class="bg-dark mt-5">
     <div class="footer-top">
         <div class="container">
             <div class="row">
