--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,19 +25,19 @@ body {
     overflow-x: hidden  ;
     background: #FDF9F4;
     line-height: 1;
-    letter-spacing: -1px;
+    letter-spacing: -0.7px;
 
 }
 
 h1{
-    font-weight: 700;
+    /* font-weight: 700; */
     color: var(--c-dark);
     line-height: 1.3;
     letter-spacing: -1px;
     
 }
 h2{
-    font-weight: 500;
+    font-weight: 350;
  
     color: var(--c-dark);
     /* line-height: 1.3; */
@@ -336,12 +336,14 @@ a:hover {
 
 #about .col-12 h1{
     font-size: 80px;
+    font-weight: 700;
 }
 
 #quote .col-12 img{
     height: auto; 
     width: 70%;
 }
+
 
 #about img{
     height: auto;
@@ -353,17 +355,22 @@ a:hover {
     font-size: 45px;
     
 }
-#about .col-lg-7 h2{
-    font-size: 39px;
+#about h2{
+    font-size: 24px;
+    color: grey;
     
+}
+#about h3{
+    font-size: 29px;
 }
 .img-float{
     width: 100px;
 }
 
-.col-lg-7 h1{
+#about h1{
     
-    font-size: 60px;
+    font-size: 52px;
+    font-weight: 600;
     
 }
 
@@ -423,22 +430,38 @@ a:hover {
 }
 
 .navbar-nav .nav-link {
-    font-weight: 500;
-    font-size: 32px;
-    margin-right: 35px;
+    font-weight: 400;
+    font-size: 18px;
+    margin-right: 25px;
     color: var(--c-dark);
+    margin-top: 10px;
 }
 
-.navbar-nav .nav-link.active {
+/* .navbar-nav .nav-link.active {
     color: gold;
-}
-
+} */
+.nav-link::after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: -4px;
+    left: 0;
+    background-color: #FFD700;
+    transition: width 0.3s ease-in-out;
+  }
+  .nav-link:hover::after {
+    width: 100%;
+  }
+  .nav-link:hover {
+    transform: translateY(-3px);
+  }
 .navbar-brand img {
     max-width: 300px;
-    margin-right: 50px;
+
 }
 
-.key {
+/* .key {
   
     display: inline-block;
     transition: transform 1.2s;
@@ -502,16 +525,16 @@ a:hover {
     transform: scale(1);
   }
 }
-
+ */
 
 
 
 /* BTN */
 .btn {
-    font-weight: 700;
-    font-size: 30px;
+    font-weight: 520;
+    font-size: 20px;
     /* text-transform: ; */
-    padding: 22px 34px;
+    padding: 10px 34px;
     border-radius: 13px;
 }
 
@@ -593,14 +616,19 @@ a:hover {
     color: yellow;
 }
 #home .display-1{
-    font-size: 106px; 
+    font-size: 62px; 
     font-weight: 700;
+}
+#home h2{
+    font-size: 22px;
+    color:  #727272
 }
 
 
 
 #quote h1{
     font-size: 90px;
+    font-weight: 600;
 }
 #quote img{
     height: auto;
