--- a/components/navbar.html
+++ b/components/navbar.html
@@ -9,7 +9,7 @@
         </button>
 
         <div class="collapse navbar-collapse" :class="{ 'show': open }" id="navbarNav">
-            <ul class="navbar-nav ms-auto sm-auto mt-4">
+            <ul class="navbar-nav ms-auto sm-auto">
                 <li class="nav-item">
                     <div class="navigation">
                     <a class="nav-link" href="/index.html" onClick=" onRouteClick('home'); return false; " @click="open = !open">Home</a>
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="./contact.html" @click="open = !open">Contact</a>
                 </li>
                 <li>
-                    <!-- <a href="#contact" @click="open = false" class="btn btn-brand ms-lg-3 ">Book your slots</a> -->
+                    <a href="#contact" @click="open = false" class="btn btn-brand">Login</a>
                 </li>
             </ul>
 
