--- a/components/footer.html
+++ b/components/footer.html
@@ -21,7 +21,7 @@
                     <h5 class="mb-0 text-white">COURSES</h5>
                     <div class="line"></div>
                     <ul>
-                        <li><a href="./courses.html">Comprehensive web development</a></li>
+                        <li><a href="./courses.html">Getting Started</a></li>
                         <li><a href="./courses.html">Operational excellence</a></li>
                         <li><a href="./courses.html">Progressive Web Applications</a></li>
                         <li><a href="./courses.html">Advanced Technical skills</a></li>
