--- a/assets/css/Functionality/timeline.css
+++ b/assets/css/Functionality/timeline.css
@@ -1,11 +1,11 @@
-.display-spec{ /*Same as Display-1 but for courses section and better margin*/
+.display-spec{ 
     font-size: 75px; 
     font-weight: 700;
     text-align: center;
     margin-top: 50px;
 }
 
-#quote{ /*For big quotes and big texts*/
+#quote{ 
     font-size: 80px;
     font-weight: 600;
     margin-top: 10px;
@@ -13,7 +13,7 @@
 
 }
 
-#subtext {  /*for small text just below lines*/
+#subtext { 
     font-size: 25px;
     color: gray;
 }
