--- a/assets/css/Main/navbar.css
+++ b/assets/css/Main/navbar.css
@@ -1,36 +1,40 @@
 .navbar {
-    background-color: white;
-    box-shadow: var(--box-shadow);
+  background-color: white;
+  box-shadow: var(--box-shadow);
 }
 
 .navbar-nav .nav-link {
-    font-weight: 400;
-    font-size: 18px;
-    margin-right: 25px;
-    color: var(--c-dark);
-    margin-top: 10px;
+  font-weight: 400;
+  font-size: 18px;
+  margin-right: 25px;
+  color: var(--c-dark);
+  margin-top: 10px;
+  position: relative; 
+  transition: transform 0.3s ease;
 }
 
 /* .navbar-nav .nav-link.active {
-    color: gold;
+  color: gold;
 } */
-.nav-link::after {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 2px;
-    bottom: -4px;
-    left: 0;
-    background-color: #FFD700;
-   
-  }
-  .nav-link:hover::after {
-    width: 100%;
-  }
-  .nav-link:hover {
-    transform: translateY(-3px);
-  }
-.navbar-brand img {
-    max-width: 300px;
 
+.nav-link::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: -4px;
+  left: 0;
+  background-color: #FFD700;
+  transition: width 0.3s ease; 
+}
+
+.nav-link:hover::after {
+  width: 100%; 
+}
+
+.nav-link:hover {
+  transform: translateY(-3px);
+}
+.navbar-brand img {
+  max-width: 300px;
 }
