--- a/assets/css/Responsive/LargeScreen.css
+++ b/assets/css/Responsive/LargeScreen.css
@@ -1,17 +1,36 @@
-@media (min-width: 1038px) and (max-width: 1398px) {
+@media (min-width: 1039px) and (max-width: 1398px) {
     body, html {
         overflow-x: hidden;
-        justify-content: center;
+        padding: 0 0px;
+       
+        
     }
+   
+    /* .small-screen img{
+        display: flex; 
+        flex-direction: row;
+        justify-content: flex-end;
+        margin-top: 20px;
+        height: auto;
+        width: 100%;
+        padding-bottom: 40px;
+        
+    }
+    .image-container{
+        display: none;
+        
+    } */
     .navbar-nav .nav-link {
-        font-size: 23px;
-        margin-right: 10px;
+        font-size: 16px;
+        margin-right: 17px;
+        
     }
     #home .display-1 {
-        font-size: 80px;
+        font-size: 50px;
     }
-    #home .mb-5 {
+    #about h1{
         font-size: 40px;
+        
     }
     #about .col-12 h2{
         font-size: 40px;
@@ -102,15 +121,7 @@
     .btn {
         /* width: 100%; */
     }
-    .typeform{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 50px;
-        
-         
-     }
+   
     
      
 }
