--- a/assets/css/Responsive/smallScreen.css
+++ b/assets/css/Responsive/smallScreen.css
@@ -20,14 +20,23 @@
         z-index: 20;
         padding: 10px 0;
     }
-    .col-lg-7 h1 {
+    #about h1 {
         font-weight: 700;
         font-size: 34px;
+        padding: 0 0px;
      
     }
-    #about .col-lg-7 h2{
-        font-size: 28px; 
-        
+    #about h2{
+        font-size: 21px; 
+        padding: 0 0px;
+    }
+    #about h3{
+        font-size: 24px; 
+        padding: 0 0px;
+    }
+    #about h4{
+        font-size: 18px; 
+        padding: 0 0px;
     }
 
     #about .col-lg-7 h2 span{
@@ -58,7 +67,7 @@
     
     #home .display-1 {
         font-size: 45px; 
-      
+        text-align: center;
     }
     #home .mb-5 {
         font-size: 22px;
@@ -70,20 +79,34 @@
         
       
     }
+    .small-screen img{
+        display: block; 
+        margin-top: 20px;
+        height: auto;
+        width: 100%;
+        padding-bottom: 40px;
+    }
+    .image-container{
+        display: none;
+    }
     #about .col-12 h2{
         font-size: 30px;
         
     }
     #about .col-12 h1{
-        font-size: 50px;
+        font-size: 42px;
      
     }
+    .col-12{
+        padding: 0 0px;
+    }
+    
     #quote .col-12 img{
         height: auto; 
         width: 100%;
     }
     #quote h1 {
-        font-size: 50px;
+        font-size: 45px;
    
     }
     .section-padding {
@@ -153,7 +176,8 @@
      }
      footer{
         text-align: left;
-       
+        font-size: 20px;
+        
         
      }
     
