--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@ h2{
   } */
   
   section {
-    padding: 100px 0;
+    /* padding: 100px 0; */
 }
 
 /* Header */
@@ -149,7 +149,7 @@ a:hover {
 
 .section-padding {
     padding-top: 100px;
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
 }
 
 .theme-shadow {
@@ -198,24 +198,28 @@ a:hover {
 .btn {
     font-weight: 520;
     font-size: 20px;
-    /* text-transform: ; */
     padding: 10px 34px;
     border-radius: 13px;
-    
+    transition: transform 0.3s ease; 
 }
 
 .btn-brand {
     background-color: var(--c-brand);
     border-color: var(--c-brand);
     color: black;
-    /* text-shadow: 2px 2px 6px yellowgreen; */
+    /* transition: background-color 0.3s ease, border-color 0.3s ease;  */
 }
 
 .btn-brand:hover {
-    background-color: var(--c-brand-light);
+    background-color: var(--c-brand);
     border-color: var(--c-brand-light);
-    color: white;
+    color: black; 
+    transform: scale(1.1); 
+    transition: transform 0.3s ease; 
 }
+
+
+
 
 .float{
 	position:fixed;
@@ -238,10 +242,12 @@ a:hover {
 
 /* SECTION TITLE */
 .section-title {
-    margin-bottom: 60px;
+    /* margin-bottom: 60px; */
    
 }
-
+.small-screen img{
+    display: none;
+}
 .section-title .line {
     width: 60px;
     height: 4px;
